--- a/index.html
+++ b/index.html
@@ -97,10 +97,8 @@
                 <div class="row">
                   <div class="col-md-12">
                     <div class="text-bg">
-                      <span>The Best</span>
-                      <h1>Inertia</h1>
-                   
-                      <a href="#">Music & Entertainment</a> <a href="#">Buy Tickets </a>
+                      <span>Inertia</span>
+                
                     </div>
                   </div>
                 </div>
