--- a/index.html
+++ b/index.html
@@ -41,7 +41,20 @@
   <!-- header -->
   <header>
     <!-- header inner -->
-
+    <div class="header-top">
+      <div class="header">
+        <div class="container">
+          <div class="row">
+            <div class="col-xl-2 col-lg-2 col-md-2 col-sm-3 col logo_section">
+              <div class="full">
+                <div class="center-desk">
+                  <div class="logo">
+                    <a href="index.html"><img src="images/logo.png" alt="#" /></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-10 col-lg-10 col-md-10 col-sm-9">
               
                <div class="menu-area">
                 <div class="limit-box">
