--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
   <!-- header -->
   <header>
     <!-- header inner -->
+    <script src="https://cdn.commoninja.com/sdk/latest/commonninja.js" defer></script>
+<div class="commonninja_component" comp-type="countdown_bar" comp-id="d777d7d8-f393-4ee5-8a56-ac027b214fee"></div>
     <div class="header-top">
       <div class="header">
         <div class="container">
