--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
               <div class="full">
                 <div class="center-desk">
                   <div class="logo">
+                    <p style="background-image: src('images/banner2.jpg');">
+
                     
                   </div>
                 </div>
