--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="about-box">
           <h2>About Us</h2>
           <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look</p>
-          <a href="Javascript:void(0)">Read More</a>
+          
         </div>
       </div>
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
@@ -134,7 +134,7 @@
                <div class="container">
               <div class="copyright">
                
-                  <p>Website designed by Graham Reger</p>
+                <p>Website designed By <a href="https://instagram.com/graham_reger">Graham Reger</a></p>
                 </div>
               </div>
             </div>
