--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
         <div class="about-box">
           <h2>About Us</h2>
-          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look</p>
+          <p>Not decided on yet</p>
           
         </div>
       </div>
@@ -131,7 +131,7 @@
 
 
               
-                <p>Website designed By <a href="https://instagram.com/graham_reger">Graham Reger</a></p>
+                <p>Website designed By <a href="https://instagram.com/graham__reger">Graham Reger</a></p>
                 </div>
               </div>
             </div>
