--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
         <div class="about-box">
           <h2>About Us</h2>
-          <p>Not decided on yet</p>
+          <p>Foreign Homes Music</p>
           
         </div>
       </div>
